# mnist-classification-in-cpp

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.cpp
include/: loader.hpp  nn.hpp  utility.hpp
mnist/: CREDIT
mnist/misc/: img2g.idx3-ubyte  img3g.idx3-ubyte  img5g.idx3-ubyte  img6g.idx3-ubyte  img7g.idx3-ubyte  img8g.idx3-ubyte  img9g.idx3-ubyte
src/: CMakeLists.txt  loader.cpp  nn.cpp  utility.cpp
